Fix the dist.ini

--- a/dist.ini
+++ b/dist.ini
@@ -1,4 +1,4 @@
-name     = Bot-Backbone
+name     = Bot-Backbone-Service-OFun
 abstract = Services for Bot::Backbone optimized for fun
 author   = Andrew Sterling Hanenkamp <hanenkamp@cpan.org>
 copyright_holder = Qubling Software LLC
